# core

./: Anchor.toml  README.md  program_id.json
not/: .default-lib.rs  error.rs  events.rs  instruction.rs  lib.rs  state.rs
programs/core-project/: Cargo.toml
programs/core-project/src/: lib.rs
tests/: core-project.ts
